Revision history for TimeTracker

0.02    2008-01-04
    - added beautify_seconds and some nicer output to stop/start

0.01    2008-01-03
    - basic functionality working (start/stop)


0.00    2008-01-02
    - first draft
